Build out minimum show piece

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "glob": "*",
         "sharp": "*",
         "express": "*",
-        "socket.io": "*"
+        "socket.io": "*",
+        "node-webcam": "*"
     }
 }
